...
            android:text="@string/textUsuario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textEmailAddress"
...
            android:text="@string/textContraseña"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/shape"
                android:fontFamily="@font/roboto"
                android:onClick="session"
...
