...
                app:fab_addButtonColorPressed="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/addn">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/idHorarioAutomatico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="?attr/colorAccent"
                    app:fab_colorPressed="?attr/colorAccent"
                    app:fab_icon="@drawable/ic_piloto_automatico"
                    app:fab_size="mini"
                    app:fab_title="Favorito" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/eliminar_materias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="?attr/colorAccent"
                    app:fab_colorPressed="?attr/colorAccent"
                    app:fab_icon="@drawable/ic_eliminar"
                    app:fab_size="mini"
...
