<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMaterias"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_materia"
    tools:context=".Interfaz.Fragments.MateriaFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Macchiato">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Materias"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_titulo_appbar"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_appbar"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

</FrameLayout>